# etf-xray-engine

./: .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  qa_runner.py  railway.toml  requirements.txt  run_dashboard.sh
api/: dependencies.py  main.py
api/models/: request.py  response.py
api/routes/: analyze.py  benchmarks.py  etf_search.py  health.py  holdings.py  premium.py
frontend/: app.js  index.html  style.css
frontend/charts/: bars.js  heatmap.js  radar.js
frontend/components/: ai_analysis.js  factor.js  feedback.js  hero.js  overlap.js  portfolio_form.js  sanitize.js  sector.js  suggestions.js  tooltip.js  topbar.js  xray.js
scripts/: amundi_api_exploration_results.json  api_test_results.json  demo_factors.py  e2e_analytics.py  enrich_directory.py  test_api_coverage.py  test_vanguard_connectivity.py
src/: cli.py
src/analytics/: _match_key.py  active_share.py  aggregator.py  benchmark.py  enrichment.py  observations.py  overlap.py  recommendations.py  redundancy.py  swap_detection.py
src/dashboard/: app.py
src/data/: ticker_isin_map.json
tests/: test_amundi.py  test_analytics.py  test_api_m1a.py  test_api_m1b.py  test_cache.py  test_enrichment.py  test_etf_directory.py  test_factors.py  test_figi_resolver.py  test_invesco.py  test_ishares.py  test_justetf.py  test_lgim.py  test_observations.py  test_orchestrator.py  test_pdf_export.py  test_portfolio_persistence.py  test_portfolio_uploader.py  test_recommendations.py  test_redundancy.py  test_spdr.py  test_ubs.py  test_vaneck.py  test_vanguard.py  test_xtrackers.py
(+60 files in other folders)
