[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "etf-xray-engine"
version = "0.1.0"
description = "ETF X-Ray Engine — transparent portfolio analytics through holdings-level decomposition"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "yfinance>=0.2",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "reportlab>=4.0",
]
orchestration = [
    "prefect>=2.14",
]
metadata = [
    "justetf-scraping>=0.5",
    "etf-scraper>=0.1",
]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
etf_xray = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
